cleaned up the codes a little bit

--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "dev": "nodemon",
-    "start": "node index.js",
+    "start": "node index.js"
     "build": "arcus-scripts build",
     "eject": "arcus-scripts eject"
 
