--- a/app/src/package.json
+++ b/app/src/package.json
@@ -23,9 +23,6 @@
   },
   "scripts": {
     "dev": "nodemon",
-    "start": "node index.js",
-    "build": "arcus-scripts build",
-    "eject": "arcus-scripts eject"
-
+    "start": "node index.js"
   }
 }
